# data-pipeline

./: README.md  ingest_data.py  pyproject.toml
