[project]
name = "data-pipeline"
version = "0.1.0"
description = "Process taxi data and ingest to DB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
